--- a/repositories/style.css
+++ b/repositories/style.css
@@ -3,6 +3,11 @@
     flex-direction: row;
 }
 
+:active, :hover, :focus {
+    outline: 0;
+    outline-offset: 0;
+}
+
 .filter{
     display: flex;
     flex-direction: column;
@@ -17,7 +22,12 @@
     justify-content: space-around;
     margin-bottom: 1%;
 }
-
+#hasOI{
+    cursor: pointer;
+}
+#hasTopics{
+    cursor: pointer;
+}
 .date{
     justify-content: space-between;
     margin-bottom: 1%;
@@ -36,8 +46,33 @@
     width: 100px;
     height: 30px;
     margin-left: 35%;
+
+    border-radius:5px;
+    position: relative;
+    padding: 6px 12px;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 20px;
+    white-space: nowrap;
+    vertical-align: middle;
+    cursor: pointer;
+    user-select: none;
+    background-repeat: repeat-x;
+    background-position: -1px -1px;
+    background-size: 110% 110%;
+    border: 1px solid rgba(27,31,35,0.2);
+    border-radius: 0.25em;
     
 }
+
+#filter:hover {
+    border-radius: 2px;
+    border-color: grey; 
+    color: #24292e;
+    background-color: #eff3f6;
+    background-image: linear-gradient(-180deg, #fafbfc 0%, #eff3f6 90%);
+}   
+
 
 .sort{
     display: flex;
@@ -51,7 +86,9 @@
     flex-direction: row;
     margin-bottom: 3%;
 }
-
+ [type="radio"]{
+    cursor: pointer;
+}
 #type{
     margin-right: 2%;
 }
@@ -66,7 +103,31 @@
     height: 30px;
     margin-left: 35%;
     margin-top: 2%;
+    border-radius:5px;
+    position: relative;
+    padding: 6px 12px;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 20px;
+    white-space: nowrap;
+    vertical-align: middle;
+    cursor: pointer;
+    user-select: none;
+    background-repeat: repeat-x;
+    background-position: -1px -1px;
+    background-size: 110% 110%;
+    border: 1px solid rgba(27,31,35,0.2);
+    border-radius: 0.25em;
 }
+
+#sort:hover {
+    border-radius: 2px;
+    border-color: grey; 
+    color: #24292e;
+    background-color: #eff3f6;
+    background-image: linear-gradient(-180deg, #fafbfc 0%, #eff3f6 90%);
+}
+
 
 #repositories{
     margin: 2%;
@@ -76,6 +137,10 @@
 .repo {
     width: 100%;
     padding: 20px;
+    background: #d0d5dd /*#c6cad1*/;
+}
+.repo:hover{
+    background: #9a9ca0;
 }
 
 .repo .name-container {
